# RadialReal

./: README.md  pyproject.toml
src/radialreal/: __init__.py  main.py
src/radialreal/config/: __init__.py  basis_config.py  forzen_config.py  potential_config.py  solver_config.py  system_config.py  thoery_config.py
src/test/: test.toml  test_oescf.toml
test/: test.toml  test_oescf.toml
