[project]
name = "radialreal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Macheng", email = "macheng97@126.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
radialreal = "radialreal:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
