[project]
name = "radialreal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Macheng", email = "macheng@calypso.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
"RR.x" = "radialreal.main:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
